--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,10 @@
 		<body>
 			<h1>
 				Devon Bridgeman
-			</h1
+			</h1>
+			<p1>
+				Data Scientist
+			</p1>
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
